# jtvec

./: .gitignore  .gitmodules  CLAIMS.md  CLAUDE.md  CONSTRAINTS.md  DRAFT_LIMITATIONS.md  LABNOTES.md  M5_SPEC.md  TAXONOMY_DESIGN.md  VENDORING.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gpt2_phase1.yaml  gpt2_phase1_n10_v1reference.yaml  m4_e1_pythia410m.yaml  m4_e2_reportgate_pythia410m.yaml  m4_e3_swap_pythia410m.yaml  m4_emergence_pythia410m.yaml  m5_0_qual_pythia1p4b_cuda.yaml  m5_0_qualification_pythia1p4b.yaml  m5_0_qualification_pythia410m.yaml  m5_0c_fit_pythia410m_draw0_cuda.yaml  m5_0c_fit_pythia410m_draw1_cuda.yaml  m5_0c_fit_pythia410m_draw2_cuda.yaml  m5_0c_swap_pythia410m.yaml  m5_1_concept_pythia410m.yaml  m5_1b_concept_diagnostic_pythia410m.yaml  m5_1c_nullcheck_pythia410m.yaml  m5_1d_ablation_pythia410m.yaml  m5_2_operator_pythia1p4b_cuda.yaml  m5_6_offdiag_pythia410m.yaml  m5_8_breadth_pythia410m.yaml  m5_lens_pythia1p4b_draw0.yaml  m5_lens_pythia1p4b_draw2.yaml  pythia410m_lens_n5_v1reference.yaml  pythia410m_lens_skip16_v1reference.yaml  pythia410m_phase1_v1reference.yaml  pythia410m_phase2_v1reference.yaml
design_input/: 15_fv_stability_v1_untracked.py
harness/: prereg_template.md  results_schema.md
harness/preregs/: EXP-M1-lens-gate.md  EXP-M2-fv-stability.md  EXP-M3-intervention-instruments.md  EXP-M4-E1-decodability.md  EXP-M4-E2-dissociation.md  EXP-M4-E2-reportgate.md  EXP-M4-E3-swap.md  EXP-M5-0-amendment-Q5.md  EXP-M5-0-qualification.md  EXP-M5-0b-lens-diagnostic.md  EXP-M5-0c-swap-decomposition.md  EXP-M5-1-concept-gate.md  EXP-M5-1b-concept-diagnostic.md  EXP-M5-1c-null-check.md  EXP-M5-1d-ablation-potency.md  EXP-M5-7-a1b-locus.md  (+5 more)
jtvec/: __init__.py  concept_gate.py  e1_decodability.py  e2_dissociation.py  e3_swap.py  emergence.py  fv_stability.py  lens_diagnostic.py  m3_instruments.py  qualification.py  report_instruments.py
jvec/: calibration.py  config.py  decompose.py  fv.py  lens_cache.py  modeling.py  report.py  utils.py
scripts/: 01_fit_lens.py  02_task_baselines.py  03_run_evals.py  04_report.py  05_extract_fvs.py  06_probe_fvs.py  07_decompose_fvs.py  08_decompose_controls.py  09_report_ablate.py  10_verify_exp3.py  11_report_protocol.py  11b_report_verdict.py  12_fv_swap.py  13_checkpoint_sweep.py  14_harden_exp1.py  m1_gate.py  m2_gate.py  m2_probe.py  m3_gate.py  m4_e1_gate.py  m4_e2_dissociation.py  m4_e2_reportgate.py  m4_e3_swap.py  m4_emergence_sweep.py  m5_0_qualification.py  m5_0b_diagnostic.py  m5_0c_swap.py  m5_1_concept_gate.py  m5_1b_concept_diagnostic.py  m5_1c_null_check.py  m5_1d_ablation_potency.py  m5_2_operator_gate.py  m5_2b_operator_criterion.py  m5_6_offdiagonal.py  m5_7_probe.py  m5_8_breadth.py  m5_8_s2_breadth.py  m5_8b_s5_toptokens.py  m5_lens_gate.py  m5_lens_gate_amended.py  (+4 more)
tasks/: capital-operand.json  capital-recall.json  context-binding.json  multihop-scaled.json  opposites.json  swap-capitals.json  typo-robustness.json  word-pairs.json
tests/: conftest.py  test_concept_gate.py  test_decompose.py  test_draws.py  test_e1_decodability.py  test_e2_dissociation.py  test_e3_swap.py  test_emergence.py  test_evals.py  test_fv_landing.py  test_gate.py  test_instruments.py  test_intervention.py  test_lens_diagnostic.py  test_m2_stability.py  test_m3_instruments.py  test_m5_0c_swap.py  test_m5_2_operator_gate.py  test_m5_2b_operator_criterion.py  test_m5_8_s2_breadth.py  test_m5_lens_gate.py  test_null_check.py  test_platform.py  test_qualification.py  test_report_instruments.py  test_reporting.py  test_runctx.py  test_skeleton.py  test_validators.py
(+665 files in other folders)
