[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jtvec"
version = "0.1.0"
description = "v2: execution vs. verbalization of task representations - measurement stack"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.13.0",
    "transformers==5.13.1",
    "huggingface_hub==1.23.0",
    "datasets==5.0.0",
    "numpy==2.4.6",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = ["pytest==9.1.1"]

# Linux CI gets CPU-only torch wheels; macOS keeps the default (MPS) wheels.
# Same pinned version everywhere.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["jtvec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
